--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     padding-bottom: 20px;
 }
 
+h3 {
+    font-weight: normal;
+}
+
 .yellow {
     color: yellow;
     text-decoration: none;
@@ -49,4 +53,9 @@
     color: black;
     text-decoration: none;
     border-bottom: 2px solid black;
+    font-weight: bold;
+}
+
+.txt a:hover {
+    color: darkblue;
 }
